--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 micronautVersion=2.1.2
 kotlinVersion=1.4.10
+micronautGrpcVersion=2.1.0
+kotlinxCoroutinesVersion=1.3.3
+protocVersion=3.12.2
+grpcVersion=1.33.0
+grpcKotlinVersion=0.1.4
